// network object

syntax = "proto3";

package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";

// ---------------------------- Network API ----------------------------
// network controller api
service NetworkApi {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "Network",
        Method: ["list", "post", "put", "delete"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}"
    };

    rpc GetNetwork (api.ObjectMeta) returns (Network) {};
    rpc ListNetworks (api.ObjectMeta) returns (NetworkList) {};
    rpc WatchNetworks (api.ObjectMeta) returns (stream NetworkEventList) {};
}

// network object
message Network {
    api.TypeMeta   TypeMeta   = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta ObjectMeta = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    NetworkSpec    Spec       = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    NetworkStatus  Status     = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}

// network spec
message NetworkSpec {
    string IPv4Subnet  = 1[(gogoproto.jsontag)="ipv4-subnet,omitempty"];   // IPv4 subnet CIDR
    string IPv4Gateway = 2[(gogoproto.jsontag)="ipv4-gateway,omitempty"];   // IPv4 gateway
    string IPv6Subnet  = 3[(gogoproto.jsontag)="ipv6-subnet,omitempty"];   // IPv6 subnet CIDR
    string IPv6Gateway = 4[(gogoproto.jsontag)="ipv6-gateway,omitempty"];   // IPv6 gateway
    uint32 VlanID      = 5[(gogoproto.jsontag)="vlan-id,omitempty"];        // VLAN ID
    uint32 VxlanVNI    = 6[(gogoproto.jsontag)="vxlan-vni,omitempty"];   // Vxlan VNI
    string RouterMAC   = 7[(gogoproto.jsontag)="router-mac,omitempty"];   // Optional router MAC parameter
}

// network status
message NetworkStatus {
    uint32 AllocatedVlanID   = 1[(gogoproto.jsontag)="allocated-vlan-id,omitempty"];  // allocated Vlan ID
    uint32 AllocatedVxlanVNI = 2[(gogoproto.jsontag)="allocated-vxlan-vni,omitempty"];  // Allocated VXLAN VNI
    uint64 NetworkID         = 3[(gogoproto.jsontag)="network-id,omitempty"];  // Network identifier
    uint64 NetworkHandle     = 4[(gogoproto.jsontag)="network-handle,omitempty"];  // datapath handle for the network
}

// list of networks
message NetworkList {
    repeated Network networks = 1;
}

// network watch event
message NetworkEvent {
    api.EventType EventType = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    Network       Network   = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "network,omitempty"];
}

message NetworkEventList {
    repeated NetworkEvent networkEvents = 1;
}